IDEK WHICH ONE IS BETTER LOOKING

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
             <div id="description">
                 Compete, gain STEM career experience, and acquire invaluable
-                leadership lessons through the Technology Student Association!
+                leadership lessons through the Technology Student Association.
             </div>
         </div>
         <div
@@ -109,7 +109,7 @@
             <div
                 class="window"
                 id="w3"
-                style="--width: 20vw; --height: 30vw; --logo-size: 4vw"
+                style="--width: 20vw; --height: 20vw; --logo-size: 4vw"
                 onclick="window.open('https://tsaweb.org/competitions/themes-and-problems', '_blank')"
             >
                 <div id="title">[ THEMES AND PROBLEMS ]</div>
